# KappaBenchmark

./: README.md  main_benchmark_grid.py  main_benchmark_imagefolder.py  main_benchmark_matmul.py  requirements.txt  setup.cfg
.github/readme/: run_mybenchmark.py
.github/scripts/: update_version.py
.github/workflows/: publish.yaml
kappabenchmark/: __init__.py  benchmarks.py  dataloading.py  dataloading_benchmarks.py  run.py
kappabenchmark/scripts/: main_benchmark_grid.py
tests_unit/: test_dataloading.py  test_run.py
