[metadata]
# version is set by CI/CD pipeline
name = kappabenchmark
description = pytorch dataset wrappers for in-memory caching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenediktAlkin/KappaBenchmark
project_urls =
    Source Code = https://github.com/BenediktAlkin/KappaBenchmark
    Bug Tracker = https://github.com/BenediktAlkin/KappaBenchmark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch
    torchvision
    kappadata
    kappaprofiler
    pytorch_concurrent_dataloader


[options.packages.find]
exclude =
    tests_unit*
    tests_mock*
    .gitignore